# co-investigator-v2

./: .gitignore  README.md  README_zh.md  pyproject.toml  pytest.ini
data/: full_pipeline_log.txt  output_full_structuring.txt
data/samples/: case_elder_exploit.json  case_shell_company.json  case_structuring.json
docs/: ARCHITECTURE.md  Architecture_en.md  Architecture_zh.md
evaluation/: runner.py  scoring.py
evaluation/golden_datasets/: case_structuring_expected.json
prompts/: compliance_validation.yaml  crime_detection.yaml  narrative_generation.yaml  planning.yaml
src/: __init__.py  app.py  config.py  runner.py
src/agents/: compliance.py  crime_detection.py  external_intel.py  feedback.py  ingestion.py  narrative.py  planning.py  privacy_guard.py
src/agents/typology/: __init__.py  account_health.py  country_risk.py  dispute_pattern.py  geo_anomaly.py  payment_velocity.py  text_content.py  transaction_fraud.py
src/core/: llm_gateway.py  models.py  state.py
src/graph/: minimal_graph.py  routing.py  sar_graph.py  typology_subgraph.py
src/infrastructure/memory/: manager.py
src/ui/: session.py
src/ui/components/: agent_trace_viewer.py  case_viewer.py  narrative_editor.py  progress_tracker.py  risk_charts.py
src/ui/pages/: 0_Home.py  1_Case_Upload.py  2_SAR_Generate.py  3_Narrative_Review.py  4_Analysis_Dashboard.py  5_History.py
tests/: smoke_test.py
tests/integration/: test_full_pipeline.py  test_minimal_pipeline.py
tests/unit/: test_crime_detection.py  test_ingestion.py  test_typology.py
