[project]
name = "co-investigator-v2"
version = "0.1.0"
description = "Agentic AI framework for AML Suspicious Activity Report (SAR) narrative generation"
requires-python = ">=3.11"

dependencies = [
    # ── LangGraph / LangChain ──
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # ── UI ──
    "streamlit>=1.40.0",
    "plotly>=5.24.0",

    # ── Data / ML ──
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scikit-learn>=1.5.0",

    # ── Memory / Vector ──
    "chromadb>=0.5.0",

    # ── Tools ──
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.poetry]
package-mode = false